lipu pi nasin sewi: lil more in 3

--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -5,15 +5,15 @@ title: lipu pi nasin Sewi — kipisi nanpa 3
 
 | Toki Pona| Chinese | English
 |-:|:-:|:-
-|  | 不尚賢使民不爭         | If you do not adulate the worthy, you will make others non-contentious.
-|  | 不貴難得之貨使民不爲盜 | If you do not value rare treasures, you will stop others from stealing.
-|  | 不見可欲使民心不亂     | If people do not see desirables, they will not be agitated.
-|  | 是以聖人之治           | Therefore, when the sage governs,
-|  | 虛其心                 | He clears people's minds,
-|  | 實其腹                 | Fills their bellies,
-|  | 弱其志                 | Weakens their ambition, (and)
-|  | 強其骨                 | Strengthens their bones.
-|  | 常使民無知無欲         | If the people are kept without cleverness and desire,
+| jan pi olin ala e jan suli la: jan li wile ala.          |       不尚賢使民不爭   | If you do not adulate the worthy, you will make others non-contentious.
+| jan pi wile jo ala e kiwen alasa la: jan li jo weka ala. | 不貴難得之貨使民不爲盜 | If you do not value rare treasures, you will stop others from stealing.
+| jan pi lukin ala e ilo wawa la: jan li nasa ala.         |     不見可欲使民心不亂 | If people do not see desirables, they will not be agitated.
+| _la:_ jan sewi li lawa e tenpo.                          | 是以聖人之治           | Therefore, when the sage governs,
+| tenpo ni li nasa ala e pilin pi jan mute.                | 虛其心                 | He clears people's minds,
+| tenpo ni li jo e moku tawa jan mute.                     | 實其腹                 | Fills their bellies,
+| tenpo ni li weka e wile pi jan mute.                     | 弱其志                 | Weakens their ambition, (and)
+| tenpo ni li wawa e sijelo pi jan mute.                   | 強其骨                 | Strengthens their bones.
+| tenpo pi jan suno ala en tenpo jan wile ala, la: | 常使民無知無欲         | If the people are kept without cleverness and desire,
 |  | 使夫知者不敢爲也       | It will make the intellectuals not dare to meddle.
 |  | 爲無爲則無不治         | Acting without contrivance, there is no lack of manageability.
 
