sitelen sitelen renderer!

--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -3,6 +3,8 @@ layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa wan
 ---
 
+{% include kipisi-nav.html num=1 %}
+
 | Toki Pona | Chinese | English
 |-:|:-:|:-
 | jan li ken nasin e nasin. nasin ni li ala e nasin Sewi.| 道可道非常道     | The Way that can be followed is not the eternal Way.
@@ -17,4 +19,17 @@ title: lipu pi nasin Sewi — kipisi nanpa wan
 | sama ni li nasa sona ala.                              | 玄之又玄         | Mystery within mystery;
 | ni li open e _nasa_ ale.                               | 衆妙之門         | The door to all marvels.
 
-{% include kipisi-nav.html num=1 %}
+* jan li ken nasin e nasin. nasin ni li ala e nasin sewi.
+* jan li ken nimi e nimi. nimi ni li ala e nimi sewi.
+* nimi ala li mama e sewi e ma.
+* nimi ale li mama e ijo ale.
+{:data-sitelen="true" data-sitelen-ratio="0.1"}
+
+* ni la jan pi wile ala li lukin e nasa suli.
+* jan pi wile ale li lukin e lon.
+* tu ni li sama. ni taso la nimi ona li ala sama.
+* sama ni li seme? sama ni li nasa sona ala.
+* ni li open e nasa ale.
+{:data-sitelen="true" data-sitelen-ratio="0.1"}
+
+{% include sitelen-sitelen-renderer.html %}
