lipu-pi-nasin-sewi: sidebar nav

--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -1,9 +1,12 @@
 ---
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa wan
+sidebar:
+  - title: "kipisi ante"
+    text: "[kipisi ale](index)"
+  - title: "kipisi sinpin la"
+    text: "[kipisi nanpa tu](2)"
 ---
-
-{% include kipisi-nav.html num=1 %}
 
 | Toki Pona | Chinese | English
 |-:|:-:|:-
@@ -18,6 +21,8 @@ title: lipu pi nasin Sewi — kipisi nanpa wan
 | sama ni li seme?                                       | 同謂之玄         | This sameness is the mystery,
 | sama ni li nasa sona ala.                              | 玄之又玄         | Mystery within mystery;
 | ni li open e _nasa_ ale.                               | 衆妙之門         | The door to all marvels.
+
+{% include kipisi-nav.html num=1 %}
 
 * jan li ken nasin e nasin. nasin ni li ala e nasin sewi.
 * jan li ken nimi e nimi. nimi ni li ala e nimi sewi.
