--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -1,9 +1,14 @@
 ---
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa tu
+sidebar:
+  - title: "kipisi monsi la"
+    text: "[kipisi nanpa wan](1)"
+  - title: "kipisi ante"
+    text: "[kipisi ale](index)"
+  - title: "kipisi sinpin la"
+    text: "[kipisi nanpa 3](3)"
 ---
-
-{% include kipisi-nav.html num=2 %}
 
 | Toki Pona| Chinese | English
 |-:|:-:|:-
@@ -25,6 +30,8 @@ title: lipu pi nasin Sewi — kipisi nanpa tu
 | ni li pali. taso la: ni li awen ala.                        | 功成而弗居         | And accomplishes without abiding in her accomplishments.
 | jan pi awen ala la:                                         | 夫唯弗居           | It is precisely because she does not abide in them
 | jan pi weka ala.                                            | 是以不去           | That they never leave her.
+
+{% include kipisi-nav.html num=2 %}
 
 * jan ale li sona e ni la: pona lukin li pona lukin.
 * ni la: jaki lukin.
