--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -1,6 +1,13 @@
 ---
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa 3
+sidebar:
+  - title: "kipisi monsi la"
+    text: "[kipisi nanpa wan](2)"
+  - title: "kipisi ante"
+    text: "[kipisi ale](index)"
+  - title: "kipisi sinpin la"
+    text: "[kipisi nanpa 4](4)"
 ---
 
 | Toki Pona| Chinese | English
@@ -13,8 +20,26 @@ title: lipu pi nasin Sewi — kipisi nanpa 3
 | tenpo ni li jo e moku tawa jan mute.                     | 實其腹                 | Fills their bellies,
 | tenpo ni li weka e wile pi jan mute.                     | 弱其志                 | Weakens their ambition, (and)
 | tenpo ni li wawa e sijelo pi jan mute.                   | 強其骨                 | Strengthens their bones.
-| tenpo pi jan suno ala en tenpo jan wile ala, la:         | 常使民無知無欲         | If the people are kept without cleverness and desire,
+| tenpo pi jan suno ala en tenpo pi jan wile ala, la:      | 常使民無知無欲         | If the people are kept without cleverness and desire,
 | jan suno li wile ala nasin.                              | 使夫知者不敢爲也       | It will make the intellectuals not dare to meddle.
 | pali e pali ala la: ni li jo e _nasin_.                  | 爲無爲則無不治         | Acting without contrivance, there is no lack of manageability.
 
 {% include kipisi-nav.html num=3 %}
+
+* jan pi olin ala e jan suli la: jan li wile ala.
+* jan pi wile jo ala e kiwen alasa la: jan li jo weka ala.
+* jan pi lukin ala e ilo wawa la: jan li nasa ala.
+{:data-sitelen="true" data-sitelen-ratio="0.4"}
+
+* ni la: jan sewi li lawa e tenpo.
+* tenpo ni li nasa ala e pilin pi jan mute.
+* tenpo ni li jo e moku tawa jan mute.
+* tenpo ni li weka e wile pi jan mute.
+* tenpo ni li wawa e sijelo pi jan mute.
+{:data-sitelen="true" data-sitelen-ratio="0.2"}
+
+* tenpo pi jan suno ala en tenpo pi jan wile ala, la: jan suno li wile ala nasin.
+* pali e pali ala la: ni li jo e nasin.
+{:data-sitelen="true" data-sitelen-ratio="0.4"}
+
+{% include sitelen-sitelen-renderer.html %}
