lipu-pi-nasin-sewi: kipisi 3 en 4

--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -4,7 +4,7 @@ title: lipu pi nasin Sewi — kipisi nanpa wan
 sidebar:
   - title: "kipisi ante"
     text: "[kipisi ale](index)"
-  - title: "kipisi sinpin la"
+  - title: "kipisi sinpin"
     text: "[kipisi nanpa tu](2)"
 ---
 
