--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -2,11 +2,11 @@
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa tu
 sidebar:
-  - title: "kipisi monsi la"
+  - title: "kipisi monsi"
     text: "[kipisi nanpa wan](1)"
   - title: "kipisi ante"
     text: "[kipisi ale](index)"
-  - title: "kipisi sinpin la"
+  - title: "kipisi sinpin"
     text: "[kipisi nanpa 3](3)"
 ---
 
