--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -2,11 +2,11 @@
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa 3
 sidebar:
-  - title: "kipisi monsi la"
-    text: "[kipisi nanpa wan](2)"
+  - title: "kipisi monsi"
+    text: "[kipisi nanpa tu](2)"
   - title: "kipisi ante"
     text: "[kipisi ale](index)"
-  - title: "kipisi sinpin la"
+  - title: "kipisi sinpin"
     text: "[kipisi nanpa 4](4)"
 ---
 
