--- a/lipu-pi-nasin-sewi/4.md
+++ b/lipu-pi-nasin-sewi/4.md
@@ -1,20 +1,46 @@
 ---
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa 4
+sidebar:
+  - title: "kipisi monsi"
+    text: "[kipisi nanpa 3](3)"
+  - title: "kipisi ante"
+    text: "[kipisi ale](index)"
+  - title: "kipisi sinpin"
+    text: "[kipisi nanpa 5](5)"
 ---
 
 | Toki Pona | Chinese | English
 |-:|:-:|:-
-|  | 道沖而用之或不盈  | The Way is so vast that when you use it, something is always left.
-|  | 淵兮              | How deep it is!
-|  | 似萬物之宗        | It seems to be the ancestor of the myriad things.
-|  | 挫其銳            | It blunts sharpness
-|  | 解其紛            | Untangles knots
-|  | 和其光            | Softens the glare
-|  | 同其塵            | Unifies with the mundane.
-|  | 湛兮              | It is so full!
-|  | 似或存            | It seems to have remainder.
-|  | 吾不知誰之子      | It is the child of I-don't-know-who.
-|  | 象帝之先          | And prior to the primeval Lord-on-high.
+| nasin sewi li suli mute. jan li ken ala pali weka e ona. | 道沖而用之或不盈  | The Way is so vast that when you use it, something is always left.
+| suli a!                           | 淵兮              | How deep it is!
+| ona li mama e ijo ale.            | 似萬物之宗        | It seems to be the ancestor of the myriad things.
+| ona li sike e kiki.               | 挫其銳            | It blunts sharpness
+| ona li kipisi e nasa.             | 解其紛            | Untangles knots
+| ona li kon e kiwen.               | 和其光            | Softens the glare
+| ona li sama e tu.                 | 同其塵            | Unifies with the mundane.
+| wawa a!                           | 湛兮              | It is so full!
+| tenpo kama la ona li lon.         | 似或存            | It seems to have remainder.
+| mi suno ala la: seme li mama ona? | 吾不知誰之子      | It is the child of I-don't-know-who.
+| ona li mama e jan lawa wawa.      | 象帝之先          | And prior to the primeval Lord-on-high.
 
 {% include kipisi-nav.html num=4 %}
+
+* nasin sewi li suli mute. jan li ken ala pali weka e ona.
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+* suli a!
+* ona li mama e ijo ale.
+* ona li sike e KIKI.
+* ona li KIPISI e nasa.
+* ona li kon e kiwen.
+* ona li sama e tu.
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+* wawa a!
+* tenpo kama la ona li lon.
+* mi suno ala la: seme li mama ona?
+* ona li mama e jan lawa wawa.
+{:data-sitelen="true" data-sitelen-ratio="1.5"}
+
+{% include sitelen-sitelen-renderer.html %}
