--- a/lipu-pi-nasin-sewi/5.md
+++ b/lipu-pi-nasin-sewi/5.md
@@ -1,20 +1,29 @@
 ---
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa 5
+sidebar:
+  - title: "kipisi monsi"
+    text: "[kipisi nanpa 4](4)"
+  - title: "kipisi ante"
+    text: "[kipisi ale](index)"
+  - title: "kipisi sinpin"
+    text: "[kipisi nanpa 6](6)"
 ---
-
-天地不仁、以萬物爲芻狗。聖人不仁、以百姓爲芻狗。天地之間、其猶豪衞乎。虛而不屈、動而愈出。多言數窮。不如守中。
 
 | Toki Pona | Chinese | English
 |-:|:-:|:-
-|  |  | Heaven and Earth are not humane,
-|  |  | And regard the myriad things as straw dogs.
-|  |  | The sage is not humane,
-|  |  | And regards all the people as straw dogs.
-|  |  | The space between Heaven and Earth is just like a bellows:
-|  |  | Empty it, it is not exhausted.
-|  |  | Squeeze it and more comes out.
-|  |  | Excessive verbiage is usually a dead end
-|  |  | Is not as good as holding to the center.
+|  | 天地不仁           | Heaven and Earth are not humane,
+|  | 以萬物爲芻狗       | And regard the myriad things as straw dogs.
+|  | 聖人不仁           | The sage is not humane,
+|  | 以百姓爲芻狗       | And regards all the people as straw dogs.
+|  | 天地之間其猶豪衞乎 | The space between Heaven and Earth is just like a bellows:
+|  | 虛而不屈           | Empty it, it is not exhausted.
+|  | 動而愈出           | Squeeze it and more comes out.
+|  | 多言數窮           | Excessive verbiage is usually a dead end
+|  | 不如守中           | Is not as good as holding to the center.
 
 {% include kipisi-nav.html num=5 %}
+
+{:data-sitelen="true" data-sitelen-ratio="1.5"}
+
+{% include sitelen-sitelen-renderer.html %}
