lipu-pi-nasin-sewi

--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -10,29 +10,29 @@ sidebar:
 
 | Toki Pona | Chinese | English
 |-:|:-:|:-
-| jan li ken nasin e nasin. nasin ni li ala e nasin Sewi.| 道可道非常道     | The Way that can be followed is not the eternal Way.
-| jan li ken nimi e nimi. nimi ni li ala e nimi Sewi.    | 名可名非常名     | The name that can be named is not the eternal name.
-| nimi ala li mama e sewi e ma.                          | 無名天地之始     | The nameless is the origin of heaven and earth
-| nimi ale li mama e ijo ale.                            | 有名萬物之母     | While naming is the origin of the myriad things.
+| jan li ken nasin e nasin. nasin ni li sewi ala e nasin.| 道可道非常道     | The Way that can be followed is not the eternal Way.
+| jan li ken nimi e nimi. nimi ni li sewi ala e nimi.    | 名可名非常名     | The name that can be named is not the eternal name.
+| ona pi nimi ala li mama e sewi e ma.                   | 無名天地之始     | The nameless is the origin of heaven and earth
+| ona pi nimi ale li mama e ijo ale.                        | 有名萬物之母     | While naming is the origin of the myriad things.
 | _la:_ jan pi wile ala li lukin e _nasa suli_.          | 故常無欲以觀其妙 | Therefore, always desireless, you see the mystery
 | jan pi wile ale li lukin e _lon_.                      | 常有欲以觀其徵   | Ever desiring, you see the manifestations.
 | tu ni li sama.                                         | 此兩者同         | These two are the same—
-| taso la: nimi ona li ala sama.                         | 出而異名         | When they appear they are named differently.
+| taso la: nimi ona li sama ala.                         | 出而異名         | When they appear they are named differently.
 | sama ni li seme?                                       | 同謂之玄         | This sameness is the mystery,
 | sama ni li nasa sona ala.                              | 玄之又玄         | Mystery within mystery;
 | ni li open e _nasa_ ale.                               | 衆妙之門         | The door to all marvels.
 
 {% include kipisi-nav.html num=1 %}
 
-* jan li ken nasin e nasin. nasin ni li ala e nasin sewi.
-* jan li ken nimi e nimi. nimi ni li ala e nimi sewi.
-* nimi ala li mama e sewi e ma.
-* nimi ale li mama e ijo ale.
+* jan li ken nasin e nasin. nasin ni li sewi ala e nasin.
+* jan li ken nimi e nimi. nimi ni li sewi ala e nimi.
+* ona pi nimi ala li mama e sewi e ma.
+* ona pi nimi ale li mama e ijo ale.
 {:data-sitelen="true" data-sitelen-ratio="0.1"}
 
-* ni la jan pi wile ala li lukin e nasa suli.
+* ni la: jan pi wile ala li lukin e nasa suli.
 * jan pi wile ale li lukin e lon.
-* tu ni li sama. ni taso la nimi ona li ala sama.
+* tu ni li sama. ni taso la: nimi ona li sama ala.
 * sama ni li seme? sama ni li nasa sona ala.
 * ni li open e nasa ale.
 {:data-sitelen="true" data-sitelen-ratio="0.1"}
