--- a/lipu-pi-nasin-sewi/81.md
+++ b/lipu-pi-nasin-sewi/81.md
@@ -1,24 +1,33 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 81
+title: lipu pi nasin sewi — kipisi nanpa 81
+sidebar:
+  - title: "kipisi monsi"
+    text: "[kipisi nanpa 80](80)"
+  - title: "kipisi ante"
+    text: "[kipisi ale](index)"
 ---
-
-## kipisi nanpa 81
-
-信言不美、美言不信。善者不辯、辯者不善。知者不博、博者不知。聖人不積、旣以爲人己愈有、旣以與人己愈多。天之道、利而不害。聖人之道、爲而不爭。
 
 | Toki Pona | Chinese | English
 |-:|:-:|:-
-|  |  | True words are not pretty.
-|  |  | Pretty words are not true.
-|  |  | The good are not argumentative.
-|  |  | The argumentative are not good.
-|  |  | The one who really knows is not broadly learned,
-|  |  | The broadly learned do not really know.
-|  |  | The sage does not hoard,
-|  |  | She gives people her surplus.
-|  |  | Giving her surplus to others she is enriched.
-|  |  | The way of Heaven is to help and not harm.
-|  |  | The way of the Sage is to act without wrangling.
+| nimi lon li pona ala.  | 信言不美 | True words are not pretty.
+| nimi pona li lon ala.  | 美言不信 | Pretty words are not true.
+| jan pona li utala ala. | 善者不辯 | The good are not argumentative.
+| jan utala li pona ala. | 辯者不善 | The argumentative are not good.
+| jan pi suno wawa li lukin ala e lipu. | 知者不博 | The one who really knows is not broadly learned,
+| jan pi lukin lipu li suno ala wawa.   | 博者不知 | The broadly learned do not really know.
+| jan sewi li wile ala e ilo ale. | 聖人不積 | The sage does not hoard,
+|  | 旣以爲人己愈有 | She gives people her surplus.
+|  | 旣以與人己愈多 | Giving her surplus to others she is enriched.
+| nasin sewi li pona li jaki ala. | 天之道利而不害 | The way of Heaven is to help and not harm.
+| nasin jan sewi li pali li wile ala. | 聖人之道爲而不爭 | The way of the Sage is to act without wrangling.
 
 {% include kipisi-nav.html num=81 %}
+
+* nimi lon li pona ala.
+* nimi pona li lon ala.
+* jan pona li utala ala.
+* jan utala li pona ala.
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+{% include sitelen-sitelen-renderer.html %}
