--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -30,9 +30,9 @@ sidebar:
 * ona pi nimi ale li mama e ijo ale.
 {:data-sitelen="true" data-sitelen-ratio="0.1"}
 
-* ni la: jan pi wile ala li lukin e nasa suli.
+* ni la jan pi wile ala li lukin e nasa suli.
 * jan pi wile ale li lukin e lon.
-* tu ni li sama. ni taso la: nimi ona li sama ala.
+* tu ni li sama. ni taso la nimi ona li sama ala.
 * sama ni li seme? sama ni li nasa sona ala.
 * ni li open e nasa ale.
 {:data-sitelen="true" data-sitelen-ratio="0.1"}
