--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa tu
+title: lipu pi nasin sewi — kipisi nanpa tu
 sidebar:
   - title: "kipisi monsi"
     text: "[kipisi nanpa wan](1)"
@@ -33,13 +33,13 @@ sidebar:
 
 {% include kipisi-nav.html num=2 %}
 
-* jan ale li sona e ni la: pona lukin li pona lukin.
-* ni la: jaki lukin.
-* jan ale li sona e ni la: pona li pona.
-* ni la: ike.
+* jan ale li sona e ni la pona lukin li pona lukin.
+* ni la jaki lukin.
+* jan ale li sona e ni la pona li pona.
+* ni la ike.
 {:data-sitelen="true" data-sitelen-ratio="0.1"}
 
-* la: lon li open e weka. weka li open e lon.
+* la lon li open e weka. weka li open e lon.
 * nasa ike li open e nasa pona. nasa pona li open e nasa ike
 * suli li pini e lili. lili li pini e suli.
 * sewi li anpa e noka. noka li anpa e sewi.
@@ -47,13 +47,13 @@ sidebar:
 * monsi li lawa e sinpin. sinpin li lawa e monsi.
 {:data-sitelen="true" data-sitelen-ratio="0.1"}
 
-* la: jan sewi li nasa e pali ala
+* la jan sewi li nasa e pali ala
 * kin: jan sewi li toki suno e nimi ala.
-* ni li mama e ijo ale. taso la: ni li weka ala e ijo ale.
-* ni li mama. taso la: ni li jo ala.
-* ni li ilo. taso la: ni li wile ala.
-* ni li pali. taso la: ni li awen ala.
-* jan pi awen ala la: jan pi weka ala.
+* ni li mama e ijo ale. taso la ni li weka ala e ijo ale.
+* ni li mama. taso la ni li jo ala.
+* ni li ilo. taso la ni li wile ala.
+* ni li pali. taso la ni li awen ala.
+* jan pi awen ala la jan pi weka ala.
 {:data-sitelen="true" data-sitelen-ratio="0.1"}
 
 {% include sitelen-sitelen-renderer.html %}
