--- a/lipu-pi-nasin-sewi/4.md
+++ b/lipu-pi-nasin-sewi/4.md
@@ -39,7 +39,7 @@ sidebar:
 
 * wawa a!
 * tenpo kama la ona li lon.
-* mi suno ala la: seme li mama ona?
+* mi suno ala la seme li mama ona?
 * ona li mama e jan lawa wawa.
 {:data-sitelen="true" data-sitelen-ratio="1.5"}
 
