--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 3
+title: lipu pi nasin sewi — kipisi nanpa 3
 sidebar:
   - title: "kipisi monsi"
     text: "[kipisi nanpa tu](2)"
@@ -26,20 +26,20 @@ sidebar:
 
 {% include kipisi-nav.html num=3 %}
 
-* jan pi olin ala e jan suli la: jan li wile ala.
-* jan pi wile jo ala e kiwen alasa la: jan li jo weka ala.
-* jan pi lukin ala e ilo wawa la: jan li nasa ala.
+* jan pi olin ala e jan suli la jan li wile ala.
+* jan pi wile jo ala e kiwen alasa la jan li jo weka ala.
+* jan pi lukin ala e ilo wawa la jan li nasa ala.
 {:data-sitelen="true" data-sitelen-ratio="0.4"}
 
-* ni la: jan sewi li lawa e tenpo.
+* ni la jan sewi li lawa e tenpo.
 * tenpo ni li nasa ala e pilin pi jan mute.
 * tenpo ni li jo e moku tawa jan mute.
 * tenpo ni li weka e wile pi jan mute.
 * tenpo ni li wawa e sijelo pi jan mute.
 {:data-sitelen="true" data-sitelen-ratio="0.2"}
 
-* tenpo pi jan suno ala en tenpo pi jan wile ala, la: jan suno li wile ala nasin.
-* pali e pali ala la: ni li jo e nasin.
+* tenpo pi jan suno ala en tenpo pi jan wile ala, la jan suno li wile ala nasin.
+* pali e pali ala la ni li jo e nasin.
 {:data-sitelen="true" data-sitelen-ratio="0.4"}
 
 {% include sitelen-sitelen-renderer.html %}
