--- a/lipu-pi-nasin-sewi/5.md
+++ b/lipu-pi-nasin-sewi/5.md
@@ -12,10 +12,10 @@ sidebar:
 
 | Toki Pona | Chinese | English
 |-:|:-:|:-
-|  | 天地不仁           | Heaven and Earth are not humane,
-|  | 以萬物爲芻狗       | And regard the myriad things as straw dogs.
-|  | 聖人不仁           | The sage is not humane,
-|  | 以百姓爲芻狗       | And regards all the people as straw dogs.
+| sewi en ma li _olin ala e jan_ | 天地不仁           | Heaven and Earth are not humane,
+| ona li _lawa tawa_ ijo ale | 以萬物爲芻狗       | And regard the myriad things as straw dogs.
+| _jan sona_ li _olin ala e jan_ | 聖人不仁           | The sage is not humane,
+| ona li _lawa tawa_ jan ale | 以百姓爲芻狗       | And regards all the people as straw dogs.
 |  | 天地之間其猶豪衞乎 | The space between Heaven and Earth is just like a bellows:
 |  | 虛而不屈           | Empty it, it is not exhausted.
 |  | 動而愈出           | Squeeze it and more comes out.
