lipu-pi-nasin-sewi: reformatting

--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -1,35 +1,53 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin sewi — kipisi nanpa tu
+title: lipu pi nasin Sewi — kipisi nanpa tu
 sidebar:
-  - title: "kipisi monsi"
-    text: "[kipisi nanpa wan](1)"
   - title: "kipisi ante"
-    text: "[kipisi ale](index)"
-  - title: "kipisi sinpin"
-    text: "[kipisi nanpa 3](3)"
+    text: |
+      * [monsi la, <br/> kipisi nanpa wan](1)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 3](3)
+      {:.kipisi-nav-sidebar}
 ---
 
-| Toki Pona| Chinese | English
-|-:|:-:|:-
-| jan ale li sona e ni la: pona lukin li pona lukin.          | 天下皆知美之爲美   | All in the world recognize the beautiful as beautiful.
-| ni la: jaki lukin.                                          | 斯惡已             | Herein lies ugliness.
-| jan ale li sona e ni la: pona li pona.                      | 皆知善之爲善       | All recognize the good as good.
-| ni la: ike.                                                 | 斯不善已           | Herein lies evil.
-| _la:_ lon li open e weka. weka li open e lon.               | 故有無相生         | Therefore — Presence and absence produce each other.
-| nasa ike li open e nasa pona. nasa pona li open e nasa ike. | 難易相成           | Difficulty and ease bring about each other.
-| _suli_ li _pini_ e _lili_. _lili_ li _pini_ e _suli_.       | 長短相較           | Long and short delimit each other.
-| _sewi_ li _anpa_ e _noka_. _noka_ li _anpa_ e _sewi_.       | 高下相傾           | High and low rest on each other.
-| kalama li pona tawa mu. mu li pona tawa kalama.             | 音聲相和           | Sound and voice harmonize each other.
-| monsi li lawa e sinpin. sinpin li lawa e monsi.             | 前後相隨           | Front and back follow each other.
-| _la:_ jan sewi li nasa e _pali ala_                         | 是以聖人處無爲之事 | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
-| kin: jan sewi li toki suno e nimi ala.                      | 行不言之教         | And carries out the wordless teaching.
-| ni li mama e ijo ale. taso la: ni li weka ala e ijo ale.    | 萬物作焉而不辭     | Here, the myriad things are made, yet not separated.
-| ni li mama. taso la: ni li jo ala.                          | 生而不有           | Therefore the sage produces without possessing,
-| ni li ilo. taso la: ni li wile ala.                         | 爲而不恃           | Acts without expectations
-| ni li pali. taso la: ni li awen ala.                        | 功成而弗居         | And accomplishes without abiding in her accomplishments.
-| jan pi awen ala la:                                         | 夫唯弗居           | It is precisely because she does not abide in them
-| jan pi weka ala.                                            | 是以不去           | That they never leave her.
+| Chinese | Toki Pona / English
+|:-:|:-
+| 天下皆知美之为美   | jan ale li sona e ni la: pona lukin li pona lukin.
+| ^^                 | All in the world recognize the beautiful as beautiful.
+| 斯恶已             | ni la: jaki lukin.
+| ^^                 | Herein lies ugliness.
+| 皆知善之为善       | jan ale li sona e ni la: pona li pona.
+| ^^                 | All recognize the good as good.
+| 斯不善已           | ni la: ike.
+| ^^                 | Herein lies evil.
+| 故有无相生         | _la:_ lon li open e weka. weka li open e lon.
+| ^^                 | Therefore — Presence and absence produce each other.
+| 难易相成           | nasa ike li open e nasa pona. nasa pona li open e nasa ike.
+| ^^                 | Difficulty and ease bring about each other.
+| 长短相较           | _suli_ li _pini_ e _lili_. _lili_ li _pini_ e _suli_.
+| ^^                 | Long and short delimit each other.
+| 高下相倾           | _sewi_ li _anpa_ e _noka_. _noka_ li _anpa_ e _sewi_.
+| ^^                 | High and low rest on each other.
+| 音聲相和           | kalama li pona tawa mu. mu li pona tawa kalama.
+| ^^                 | Sound and voice harmonize each other.
+| 前後相隨           | monsi li tawa e sinpin. sinpin li tawa e monsi.
+| ^^                 | Front and back follow each other.
+| 是以圣人处无为之事 | _la:_ jan sewi li nasa e _pali ala_
+| ^^                 | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
+| 行不言之教         | kin: jan sewi li toki suno e nimi ala.
+| ^^                 | And carries out the wordless teaching.
+| 萬物作焉而不辭     | ni li mama e ijo ale. taso la: ni li weka ala e ijo ale.
+| ^^                 | Here, the myriad things are made, yet not separated.
+| 生而不有           | ni li mama. taso la: ni li jo ala.
+| ^^                 | Therefore the sage produces without possessing,
+| 为而不恃           | ni li ilo. taso la: ni li wile ala.
+| ^^                 | Acts without expectations
+| 功成而弗居         | ni li pali. taso la: ni li awen ala.
+| ^^                 | And accomplishes without abiding in her accomplishments.
+| 夫唯弗居           | jan pi awen ala la: ...
+| ^^                 | It is precisely because she does not abide in them
+| 是以不去           | jan pi weka ala.
+| ^^                 | That they never leave her.
 
 {% include kipisi-nav.html num=2 %}
 
@@ -37,7 +55,7 @@ sidebar:
 * ni la jaki lukin.
 * jan ale li sona e ni la pona li pona.
 * ni la ike.
-{:data-sitelen="true" data-sitelen-ratio="0.1"}
+{:sitelen data-sitelen-ratio="1.68"}
 
 * la lon li open e weka. weka li open e lon.
 * nasa ike li open e nasa pona. nasa pona li open e nasa ike
@@ -45,7 +63,7 @@ sidebar:
 * sewi li anpa e noka. noka li anpa e sewi.
 * kalama li pona tawa mu. mu li pona tawa kalama.
 * monsi li lawa e sinpin. sinpin li lawa e monsi.
-{:data-sitelen="true" data-sitelen-ratio="0.1"}
+{:sitelen data-sitelen-ratio="1.68"}
 
 * la jan sewi li nasa e pali ala
 * kin: jan sewi li toki suno e nimi ala.
@@ -54,6 +72,6 @@ sidebar:
 * ni li ilo. taso la ni li wile ala.
 * ni li pali. taso la ni li awen ala.
 * jan pi awen ala la jan pi weka ala.
-{:data-sitelen="true" data-sitelen-ratio="0.1"}
+{:sitelen data-sitelen-ratio="1.68"}
 
 {% include sitelen-sitelen-renderer.html %}
