--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -1,45 +1,56 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin sewi — kipisi nanpa 3
+title: lipu pi nasin Sewi — kipisi nanpa 3
 sidebar:
-  - title: "kipisi monsi"
-    text: "[kipisi nanpa tu](2)"
   - title: "kipisi ante"
-    text: "[kipisi ale](index)"
-  - title: "kipisi sinpin"
-    text: "[kipisi nanpa 4](4)"
+    text: |
+      * [monsi la, <br/> kipisi nanpa tu](2)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 4](4)
+      {:.kipisi-nav-sidebar}
 ---
 
-| Toki Pona| Chinese | English
-|-:|:-:|:-
-| jan pi olin ala e jan suli la: jan li wile ala.          | 不尚賢使民不爭         | If you do not adulate the worthy, you will make others non-contentious.
-| jan pi wile jo ala e kiwen alasa la: jan li jo weka ala. | 不貴難得之貨使民不爲盜 | If you do not value rare treasures, you will stop others from stealing.
-| jan pi lukin ala e ilo wawa la: jan li nasa ala.         | 不見可欲使民心不亂     | If people do not see desirables, they will not be agitated.
-| _la:_ jan sewi li lawa e tenpo.                          | 是以聖人之治           | Therefore, when the sage governs,
-| tenpo ni li nasa ala e pilin pi jan mute.                | 虛其心                 | He clears people's minds,
-| tenpo ni li jo e moku tawa jan mute.                     | 實其腹                 | Fills their bellies,
-| tenpo ni li weka e wile pi jan mute.                     | 弱其志                 | Weakens their ambition, (and)
-| tenpo ni li wawa e sijelo pi jan mute.                   | 強其骨                 | Strengthens their bones.
-| tenpo pi jan suno ala en tenpo pi jan wile ala, la:      | 常使民無知無欲         | If the people are kept without cleverness and desire,
-| jan suno li wile ala nasin.                              | 使夫知者不敢爲也       | It will make the intellectuals not dare to meddle.
-| pali e pali ala la: ni li jo e _nasin_.                  | 爲無爲則無不治         | Acting without contrivance, there is no lack of manageability.
+| Chinese | Toki Pona / English
+|:-:|:-
+| 不尚賢使民不爭         | jan pi olin ala e jan suli la: jan li wile ala.
+| ^^ | If you do not adulate the worthy, you will make others non-contentious.
+| 不貴難得之貨使民不爲盜 | jan pi wile jo ala e kiwen alasa la: jan li jo weka ala.
+| ^^ | If you do not value rare treasures, you will stop others from stealing.
+| 不見可欲使民心不亂     | jan pi lukin ala e ilo wawa la: jan li nasa ala.
+| ^^ | If people do not see desirables, they will not be agitated.
+| 是以聖人之治           | _la:_ jan sewi li lawa e tenpo.
+| ^^ | Therefore, when the sage governs,
+| 虛其心                 | tenpo ni li nasa ala e pilin pi jan mute.
+| ^^ | He clears people's minds,
+| 實其腹                 | tenpo ni li jo e moku tawa jan mute.
+| ^^ | Fills their bellies,
+| 弱其志                 | tenpo ni li weka e wile pi jan mute.
+| ^^ | Weakens their ambition, (and)
+| 強其骨                 | tenpo ni li wawa e sijelo pi jan mute.
+| ^^ | Strengthens their bones.
+| 常使民無知無欲         | tenpo pi jan suno ala en tenpo pi jan wile ala, la:
+| ^^ | If the people are kept without cleverness and desire,
+| 使夫知者不敢爲也       | jan suno li wile ala nasin.
+| ^^ | It will make the intellectuals not dare to meddle.
+| 爲無爲則無不治         | pali e pali ala la: ni li jo e _nasin_.
+| ^^ | Acting without contrivance, there is no lack of manageability.
 
 {% include kipisi-nav.html num=3 %}
 
 * jan pi olin ala e jan suli la jan li wile ala.
 * jan pi wile jo ala e kiwen alasa la jan li jo weka ala.
 * jan pi lukin ala e ilo wawa la jan li nasa ala.
-{:data-sitelen="true" data-sitelen-ratio="0.4"}
+{:sitelen data-sitelen-ratio="0.4"}
 
 * ni la jan sewi li lawa e tenpo.
 * tenpo ni li nasa ala e pilin pi jan mute.
 * tenpo ni li jo e moku tawa jan mute.
 * tenpo ni li weka e wile pi jan mute.
 * tenpo ni li wawa e sijelo pi jan mute.
-{:data-sitelen="true" data-sitelen-ratio="0.2"}
+{:sitelen data-sitelen-ratio="0.2"}
 
 * tenpo pi jan suno ala en tenpo pi jan wile ala, la jan suno li wile ala nasin.
 * pali e pali ala la ni li jo e nasin.
-{:data-sitelen="true" data-sitelen-ratio="0.4"}
+{:sitelen data-sitelen-ratio="0.4"}
 
 {% include sitelen-sitelen-renderer.html %}
