--- a/lipu-pi-nasin-sewi/6.md
+++ b/lipu-pi-nasin-sewi/6.md
@@ -1,17 +1,25 @@
 ---
 layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa 6
+sidebar:
+  - title: "kipisi monsi"
+    text: "[kipisi nanpa 5](5)"
+  - title: "kipisi ante"
+    text: "[kipisi ale](index)"
+  - title: "kipisi sinpin"
+    text: "[kipisi nanpa 7](7)"
 ---
 
-谷神不死。是謂玄牝。玄牝之門、是謂天地之根。係係若存、用之不勤。
+* 
+{:data-sitelen="true" data-sitelen-ratio="10"}
 
 | Toki Pona | Chinese | English
 |-:|:-:|:-
-|  |  | The valley spirit never dies.
-|  |  | It is called “the mysterious female.”
-|  |  | The opening of the mysterious female
-|  |  | Is called “the root of Heaven and Earth.”
-|  |  | Continuous, seeming to remain.
-|  |  | Use it without exertion.
+|  | 谷神不死 | The valley spirit never dies.
+|  | 是謂玄牝 | It is called “the mysterious female.”
+|  | 玄牝之門 | The opening of the mysterious female
+|  | 是謂天地之根 | Is called “the root of Heaven and Earth.”
+|  | 係係若存 | Continuous, seeming to remain.
+|  | 用之不勤 | Use it without exertion.
 
 {% include kipisi-nav.html num=6 %}
