--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -3,38 +3,54 @@ layout: lipu-pi-nasin-sewi
 title: lipu pi nasin Sewi — kipisi nanpa wan
 sidebar:
   - title: "kipisi ante"
-    text: "[kipisi ale](index)"
-  - title: "kipisi sinpin"
-    text: "[kipisi nanpa tu](2)"
+    text: |
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa tu](2)
+      {:.kipisi-nav-sidebar}
 ---
 
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-| jan li ken nasin e nasin. nasin ni li sewi ala e nasin.| 道可道非常道     | The Way that can be followed is not the eternal Way.
-| jan li ken nimi e nimi. nimi ni li sewi ala e nimi.    | 名可名非常名     | The name that can be named is not the eternal name.
-| ona pi nimi ala li mama e sewi e ma.                   | 無名天地之始     | The nameless is the origin of heaven and earth
-| ona pi nimi ale li mama e ijo ale.                        | 有名萬物之母     | While naming is the origin of the myriad things.
-| _la:_ jan pi wile ala li lukin e _nasa suli_.          | 故常無欲以觀其妙 | Therefore, always desireless, you see the mystery
-| jan pi wile ale li lukin e _lon_.                      | 常有欲以觀其徵   | Ever desiring, you see the manifestations.
-| tu ni li sama.                                         | 此兩者同         | These two are the same—
-| taso la: nimi ona li sama ala.                         | 出而異名         | When they appear they are named differently.
-| sama ni li seme?                                       | 同謂之玄         | This sameness is the mystery,
-| sama ni li nasa sona ala.                              | 玄之又玄         | Mystery within mystery;
-| ni li open e _nasa_ ale.                               | 衆妙之門         | The door to all marvels.
+| Chinese | Toki Pona / English
+|:-:|:-
+| 道可道非常道     | jan li ken nasin e nasin • nasin ni li sama ala e nasin lon
+| ^^               | The Way that can be followed is not the eternal Way.
+| 名可名非常名     | jan li ken nimi e nimi • nimi ni li sama ala e nimi lon
+| ^^               | The name that can be named is not the eternal name.
+| 无名天地之始     | ona pi nimi ala li tan e sewi li tan e ma
+| ^^               | The nameless is the origin of heaven and earth
+| 有名万物之母     | nimi li mama e ijo ale
+| ^^               | While naming is the origin of the myriad things.
+| 故常无欲以观其妙 | jan pi wile ala li lukin e nasa wawa
+| ^^               | Therefore, always desireless, you see the mystery
+| 常有欲以观其徵   | jan pi wile ale li lukin e ilo lon
+| ^^               | Ever desiring, you see the manifestations.
+| 此两者同         | tu ni li sama
+| ^^               | These two are the same—
+| 出而异名         | taso la, nimi pi tu ni li sama ala
+| ^^               | When they appear they are named differently.
+| 同谓之玄         | sama ni li seme
+| ^^               | This sameness is the mystery,
+| 玄之又玄         | weka sona li sama ni
+| ^^               | Mystery within mystery;
+| 衆妙之门         | ni li open e nasa wawa mute
+| ^^               | The door to all marvels.
 
 {% include kipisi-nav.html num=1 %}
 
-* jan li ken nasin e nasin. nasin ni li sewi ala e nasin.
-* jan li ken nimi e nimi. nimi ni li sewi ala e nimi.
-* ona pi nimi ala li mama e sewi e ma.
-* ona pi nimi ale li mama e ijo ale.
-{:data-sitelen="true" data-sitelen-ratio="0.1"}
+jan li ken nasin e nasin. nasin ni li sama ala e nasin lon.
+jan li ken nimi e nimi. nimi ni li sama ala e nimi lon.
+ona pi nimi ala li tan e sewi li tan e ma.
+nimi li mama e ijo ale.
+jan pi wile ala li lukin e nasa wawa.
+jan pi wile ale li lukin e ilo lon.
+{:sitelen data-sitelen-ratio="1.68"}
 
-* ni la jan pi wile ala li lukin e nasa suli.
-* jan pi wile ale li lukin e lon.
-* tu ni li sama. ni taso la nimi ona li sama ala.
-* sama ni li seme? sama ni li nasa sona ala.
-* ni li open e nasa ale.
-{:data-sitelen="true" data-sitelen-ratio="0.1"}
+tu ni li sama. taso la nimi pi tu ni li sama ala.
+{:sitelen data-sitelen-ratio="0.7"}
+
+sama ni li seme? weka sona li sama ni.
+{:sitelen data-sitelen-ratio="1.68"}
+
+ni li open e nasa wawa mute!
+{:sitelen data-sitelen-ratio="3"}
 
 {% include sitelen-sitelen-renderer.html %}
