lipu-pi-nasin-sewi: WIP

--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -12,31 +12,31 @@ sidebar:
 
 | Chinese | Toki Pona / English
 |:-:|:-
-| 天下皆知美之为美   | jan ale li sona e ni la: pona lukin li pona lukin.
+| 天下皆知美之为美   | lukin wawa la, jan ale li sona e wawa lukin
 | ^^                 | All in the world recognize the beautiful as beautiful.
-| 斯恶已             | ni la: jaki lukin.
+| 斯恶已             | ni li tan e kule jaki.
 | ^^                 | Herein lies ugliness.
-| 皆知善之为善       | jan ale li sona e ni la: pona li pona.
+| 皆知善之为善       | pona la, jan ale li sona e pona.
 | ^^                 | All recognize the good as good.
-| 斯不善已           | ni la: ike.
+| 斯不善已           | ni li tan e pona ala.
 | ^^                 | Herein lies evil.
-| 故有无相生         | _la:_ lon li open e weka. weka li open e lon.
+| 故有无相生         | tan ni la, jo li open e weka. weka li open e jo.
 | ^^                 | Therefore — Presence and absence produce each other.
 | 难易相成           | nasa ike li open e nasa pona. nasa pona li open e nasa ike.
 | ^^                 | Difficulty and ease bring about each other.
-| 长短相较           | _suli_ li _pini_ e _lili_. _lili_ li _pini_ e _suli_.
+| 长短相较           | suli li mute e lili. lili li mute e suli.
 | ^^                 | Long and short delimit each other.
-| 高下相倾           | _sewi_ li _anpa_ e _noka_. _noka_ li _anpa_ e _sewi_.
+| 高下相倾           | lawa li anpa e noka. noka li anpa e lawa.
 | ^^                 | High and low rest on each other.
 | 音聲相和           | kalama li pona tawa mu. mu li pona tawa kalama.
 | ^^                 | Sound and voice harmonize each other.
 | 前後相隨           | monsi li tawa e sinpin. sinpin li tawa e monsi.
 | ^^                 | Front and back follow each other.
-| 是以圣人处无为之事 | _la:_ jan sewi li nasa e _pali ala_
+| 是以圣人处无为之事 | sona ni la, jan sewi li nasa e _pali ala_
 | ^^                 | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
 | 行不言之教         | kin: jan sewi li toki suno e nimi ala.
 | ^^                 | And carries out the wordless teaching.
-| 萬物作焉而不辭     | ni li mama e ijo ale. taso la: ni li weka ala e ijo ale.
+| 万物作焉而不辞     | ni li mama e ijo ale. taso la: ni li weka ala e ijo ale.
 | ^^                 | Here, the myriad things are made, yet not separated.
 | 生而不有           | ni li mama. taso la: ni li jo ala.
 | ^^                 | Therefore the sage produces without possessing,
@@ -51,15 +51,17 @@ sidebar:
 
 {% include kipisi-nav.html num=2 %}
 
-* jan ale li sona e ni la pona lukin li pona lukin.
-* ni la jaki lukin.
-* jan ale li sona e ni la pona li pona.
-* ni la ike.
-{:sitelen data-sitelen-ratio="1.68"}
+lukin wawa la jan ale li sona e wawa lukin. ni li tan e kule jaki.
+{:sitelen data-sitelen-ratio="0.7"}
+pona la jan ale li sona e pona, ni li tan e pona ala.
+{:sitelen data-sitelen-ratio="1"}
+tan ni la jo li open e weka, weka li open e jo.
+{:sitelen data-sitelen-ratio="0.7"}
+nasa ike li open e nasa pona, nasa pona li open e nasa ike
+{:sitelen data-sitelen-ratio="1"}
 
-* la lon li open e weka. weka li open e lon.
-* nasa ike li open e nasa pona. nasa pona li open e nasa ike
-* suli li pini e lili. lili li pini e suli.
+_suli li pini e lili. lili li pini e suli._{:sitelen data-sitelen-ratio="2"}
+
 * sewi li anpa e noka. noka li anpa e sewi.
 * kalama li pona tawa mu. mu li pona tawa kalama.
 * monsi li lawa e sinpin. sinpin li lawa e monsi.
