lipu-pi-nasin-sewi: WIP

--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -36,21 +36,25 @@ sidebar:
 
 {% include kipisi-nav.html num=1 %}
 
+-------
+{:#sitelen}
+
 jan li ken nasin e nasin. nasin ni li sama ala e nasin lon.
 jan li ken nimi e nimi. nimi ni li sama ala e nimi lon.
 ona pi nimi ala li tan e sewi li tan e ma.
 nimi li mama e ijo ale.
 jan pi wile ala li lukin e nasa wawa.
 jan pi wile ale li lukin e ilo lon.
-{:sitelen data-sitelen-ratio="1.68"}
+{:sitelen data-sitelen-ratio="1"}
 
-tu ni li sama. taso la nimi pi tu ni li sama ala.
-{:sitelen data-sitelen-ratio="0.7"}
+tu ni li sama.
+taso la nimi pi tu ni li sama ala.
+{:sitelen data-sitelen-ratio="0.2"}
 
 sama ni li seme? weka sona li sama ni.
-{:sitelen data-sitelen-ratio="1.68"}
+{:sitelen data-sitelen-ratio="2"}
 
 ni li open e nasa wawa mute!
-{:sitelen data-sitelen-ratio="3"}
+{:sitelen data-sitelen-ratio="5"}
 
 {% include sitelen-sitelen-renderer.html %}
