--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -28,52 +28,51 @@ sidebar:
 | ^^                 | Long and short delimit each other.
 | 高下相倾           | lawa li anpa e noka. noka li anpa e lawa.
 | ^^                 | High and low rest on each other.
-| 音聲相和           | kalama li pona tawa mu. mu li pona tawa kalama.
+| 音声相和           | kalama li pona tawa mu. mu li pona tawa kalama.
 | ^^                 | Sound and voice harmonize each other.
-| 前後相隨           | monsi li tawa e sinpin. sinpin li tawa e monsi.
+| 前后相随           | monsi li lawa e sinpin. sinpin li lawa e monsi.
 | ^^                 | Front and back follow each other.
-| 是以圣人处无为之事 | sona ni la, jan sewi li nasa e _pali ala_
+| 是以圣人处无为之事 | sona ni la, jan sewi li jo kepeken pali ala
 | ^^                 | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
-| 行不言之教         | kin: jan sewi li toki suno e nimi ala.
+| 行不言之教         | kin: jan sewi li lawa kepeken nimi ala.
 | ^^                 | And carries out the wordless teaching.
-| 万物作焉而不辞     | ni li mama e ijo ale. taso la: ni li weka ala e ijo ale.
+| 万物作焉而不辞     | ni li mama e ijo ale. taso la, ijo ale li tu ala.
 | ^^                 | Here, the myriad things are made, yet not separated.
-| 生而不有           | ni li mama. taso la: ni li jo ala.
+| 生而不有           | ni li mama li jo ala.
 | ^^                 | Therefore the sage produces without possessing,
-| 为而不恃           | ni li ilo. taso la: ni li wile ala.
+| 为而不恃           | ni li ilo li wile ala.
 | ^^                 | Acts without expectations
-| 功成而弗居         | ni li pali. taso la: ni li awen ala.
+| 功成而弗居         | ni li pali anu seme?
 | ^^                 | And accomplishes without abiding in her accomplishments.
-| 夫唯弗居           | jan pi awen ala la: ...
+| 夫唯弗居           | jan wan anu seme?
 | ^^                 | It is precisely because she does not abide in them
-| 是以不去           | jan pi weka ala.
+| 是以不去           | ni la, tawa ala.
 | ^^                 | That they never leave her.
 
 {% include kipisi-nav.html num=2 %}
 
+-------
+{:#sitelen}
+
 lukin wawa la jan ale li sona e wawa lukin. ni li tan e kule jaki.
-{:sitelen data-sitelen-ratio="0.7"}
-pona la jan ale li sona e pona, ni li tan e pona ala.
+pona la jan ale li sona e pona. ni li tan e pona ala.
+tan ni la jo li open e weka. weka li open e jo.
+nasa ike li open e nasa pona. nasa pona li open e nasa ike.
+suli li mute e lili. lili li mute e suli.
+lawa li anpa e noka. noka li anpa e lawa.
+kalama li pona tawa mu. mu li pona tawa kalama.
+monsi li lawa e sinpin. sinpin li lawa e monsi.
+{:sitelen data-sitelen-ratio="0.3"}
+
+sona ni la jan sewi li jo kepeken pali ala.
+kin jan sewi li lawa kepeken nimi ala.
 {:sitelen data-sitelen-ratio="1"}
-tan ni la jo li open e weka, weka li open e jo.
-{:sitelen data-sitelen-ratio="0.7"}
-nasa ike li open e nasa pona, nasa pona li open e nasa ike
-{:sitelen data-sitelen-ratio="1"}
 
-_suli li pini e lili. lili li pini e suli._{:sitelen data-sitelen-ratio="2"}
-
-* sewi li anpa e noka. noka li anpa e sewi.
-* kalama li pona tawa mu. mu li pona tawa kalama.
-* monsi li lawa e sinpin. sinpin li lawa e monsi.
-{:sitelen data-sitelen-ratio="1.68"}
-
-* la jan sewi li nasa e pali ala
-* kin: jan sewi li toki suno e nimi ala.
-* ni li mama e ijo ale. taso la ni li weka ala e ijo ale.
-* ni li mama. taso la ni li jo ala.
-* ni li ilo. taso la ni li wile ala.
-* ni li pali. taso la ni li awen ala.
-* jan pi awen ala la jan pi weka ala.
-{:sitelen data-sitelen-ratio="1.68"}
+ni li mama e ijo ale. taso la ijo ale li tu ala.
+ni li mama. taso la ni li jo ala.
+ni li ilo. taso la ni li wile ala.
+ni li pali. taso la ni li awen ala.
+jan pi awen ala la jan li weka ala.
+{:sitelen data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
