lipu-pi-nasin-sewi: WIP

--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -66,13 +66,16 @@ monsi li lawa e sinpin. sinpin li lawa e monsi.
 
 sona ni la jan sewi li jo kepeken pali ala.
 kin jan sewi li lawa kepeken nimi ala.
-{:sitelen data-sitelen-ratio="1"}
+{:sitelen data-sitelen-ratio="3"}
 
 ni li mama e ijo ale. taso la ijo ale li tu ala.
-ni li mama. taso la ni li jo ala.
-ni li ilo. taso la ni li wile ala.
-ni li pali. taso la ni li awen ala.
-jan pi awen ala la jan li weka ala.
+ni li mama li jo ala.
+ni li ilo li wile ala.
 {:sitelen data-sitelen-ratio="0.5"}
+
+ni li pali anu seme?
+jan wan anu seme?
+ni la tawa ala.
+{:sitelen data-sitelen-ratio="1"}
 
 {% include sitelen-sitelen-renderer.html %}
