--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -12,45 +12,47 @@ sidebar:
 
 | Chinese | Toki Pona / English
 |:-:|:-
-| 不尚賢使民不爭         | jan pi olin ala e jan suli la: jan li wile ala.
-| ^^ | If you do not adulate the worthy, you will make others non-contentious.
-| 不貴難得之貨使民不爲盜 | jan pi wile jo ala e kiwen alasa la: jan li jo weka ala.
-| ^^ | If you do not value rare treasures, you will stop others from stealing.
-| 不見可欲使民心不亂     | jan pi lukin ala e ilo wawa la: jan li nasa ala.
-| ^^ | If people do not see desirables, they will not be agitated.
-| 是以聖人之治           | _la:_ jan sewi li lawa e tenpo.
-| ^^ | Therefore, when the sage governs,
-| 虛其心                 | tenpo ni li nasa ala e pilin pi jan mute.
-| ^^ | He clears people's minds,
-| 實其腹                 | tenpo ni li jo e moku tawa jan mute.
-| ^^ | Fills their bellies,
+| 不尚贤使民不争         | jan li olin ala e jan wawa la: jan ale li wile ala suli.
+| ^^                     | If you do not adulate the worthy, you will make others non-contentious.
+| 不贵难得之货使民不为盗 | jan li olin ala e ijo mani la: jan ale li alasa ala jo.
+| ^^                     | If you do not value rare treasures, you will stop others from stealing.
+| 不见可欲使民心不乱     | jan li lukin ala e ilo alasa la: jan ale li nasa ala.
+| ^^                     | If people do not see desirables, they will not be agitated.
+| 是以圣人之治           | jan sewi li lawa la,
+| ^^                     | Therefore, when the sage governs,
+| 虚其心                 | tenpo ni li nasa ala e pilin pi jan mute.
+| ^^                     | He clears people's minds,
+| 实其腹                 | tenpo ni li jo e moku tawa jan mute.
+| ^^                     | Fills their bellies,
 | 弱其志                 | tenpo ni li weka e wile pi jan mute.
-| ^^ | Weakens their ambition, (and)
-| 強其骨                 | tenpo ni li wawa e sijelo pi jan mute.
-| ^^ | Strengthens their bones.
-| 常使民無知無欲         | tenpo pi jan suno ala en tenpo pi jan wile ala, la:
-| ^^ | If the people are kept without cleverness and desire,
-| 使夫知者不敢爲也       | jan suno li wile ala nasin.
-| ^^ | It will make the intellectuals not dare to meddle.
-| 爲無爲則無不治         | pali e pali ala la: ni li jo e _nasin_.
-| ^^ | Acting without contrivance, there is no lack of manageability.
+| ^^                     | Weakens their ambition, (and)
+| 强其骨                 | tenpo ni li wawa e sijelo pi jan mute.
+| ^^                     | Strengthens their bones.
+| 常使民无知无欲         | jan pi suno ala en jan pi wile ala la,
+| ^^                     | If the people are kept without cleverness and desire,
+| 使夫知者不敢为也       | jan suno li wile ala nasin.
+| ^^                     | It will make the intellectuals not dare to meddle.
+| 为无为则无不治         | pali e pali ala la: ken lawa e ilo ale.
+| ^^                     | Acting without contrivance, there is no lack of manageability.
 
 {% include kipisi-nav.html num=3 %}
 
-* jan pi olin ala e jan suli la jan li wile ala.
-* jan pi wile jo ala e kiwen alasa la jan li jo weka ala.
-* jan pi lukin ala e ilo wawa la jan li nasa ala.
-{:sitelen data-sitelen-ratio="0.4"}
+jan li olin ala e jan wawa la jan ale li wile ala suli.
+jan li olin ala e ijo mani la jan ale li alasa ala jo.
+jan li lukin ala e ilo alasa la jan ale li nasa ala.
+{:sitelen data-sitelen-ratio="0.7"}
 
-* ni la jan sewi li lawa e tenpo.
-* tenpo ni li nasa ala e pilin pi jan mute.
-* tenpo ni li jo e moku tawa jan mute.
-* tenpo ni li weka e wile pi jan mute.
-* tenpo ni li wawa e sijelo pi jan mute.
-{:sitelen data-sitelen-ratio="0.2"}
+jan sewi li lawa la:
+{:sitelen data-sitelen-ratio="2"}
 
-* tenpo pi jan suno ala en tenpo pi jan wile ala, la jan suno li wile ala nasin.
-* pali e pali ala la ni li jo e nasin.
-{:sitelen data-sitelen-ratio="0.4"}
+tenpo ni li nasa ala e pilin pi jan mute.
+tenpo ni li jo e moku tawa jan mute.
+tenpo ni li weka e wile pi jan mute.
+tenpo ni li wawa e sijelo pi jan mute.
+{:sitelen data-sitelen-ratio="0.5"}
+
+jan pi suno ala, en jan pi wile ala, la jan suno li wile ala nasin.
+pali e pali ala, la ken lawa e ilo ale.
+{:sitelen data-sitelen-ratio="3"}
 
 {% include sitelen-sitelen-renderer.html %}
